[gd_scene load_steps=12 format=3 uid="uid://cvk8dd4grhbkn"]

[ext_resource type="Script" path="res://src/Actors/play_menu.gd" id="1_7im7c"]
[ext_resource type="Texture2D" uid="uid://cb3cwnxfqrfnx" path="res://assets/textures/character_selection_screen/shroomguy jumper title screen play ALUS.png" id="2_ffnfg"]
[ext_resource type="Texture2D" uid="uid://cttxcnj5cx2vs" path="res://assets/textures/character_selection_screen/titlescreen idle spritesheet.png" id="3_bacr1"]
[ext_resource type="Texture2D" uid="uid://do8j8bgohbjf0" path="res://assets/textures/character_selection_screen/titlescreen on click spritesheet.png" id="4_bdb82"]

[sub_resource type="Animation" id="Animation_iiuno"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qa337"]
resource_name = "fade_to_black"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.49),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ocd0l"]
_data = {
"RESET": SubResource("Animation_iiuno"),
"fade_to_black": SubResource("Animation_qa337")
}

[sub_resource type="Animation" id="Animation_q70v6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_bacr1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q3e6p"]
resource_name = "play_idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_bacr1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 6, 7, 8, 11, 9, 10, 4, 5]
}

[sub_resource type="Animation" id="Animation_50pw7"]
resource_name = "play_on_click"
length = 2.7
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_bdb82")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825, 0.9, 0.975, 1.05, 1.125, 1.2, 1.275, 1.35, 1.425, 1.5, 1.575, 1.65, 1.725, 1.8, 1.875, 1.95, 2.025, 2.1, 2.175, 2.25, 2.325, 2.4, 2.475, 2.55, 2.625, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 31, 30, 28, 20]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0eyii"]
_data = {
"RESET": SubResource("Animation_q70v6"),
"play_idle": SubResource("Animation_q3e6p"),
"play_on_click": SubResource("Animation_50pw7")
}

[node name="Character_selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7im7c")

[node name="Characters" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ocd0l")
}

[node name="ShroomguyJumperTitleScreenPlayAlus" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.50026, 0.5)
texture = ExtResource("2_ffnfg")
region_rect = Rect2(0, 0, 3840, 2160)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 628.0
offset_top = 388.0
offset_right = -631.0
offset_bottom = -339.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Plot" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(660, 165)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/Plot"]
modulate = Color(1, 1, 1, 0.705882)
position = Vector2(332, 115)
texture = ExtResource("3_bacr1")
hframes = 3
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/Plot"]
libraries = {
"": SubResource("AnimationLibrary_0eyii")
}
autoplay = "play_idle"

[node name="Clay" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
focus_mode = 0
text = "CLAY      (placeholder)"

[node name="Kukk" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
text = "KUKK       (placeholder)"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Plot" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Plot" to="." method="_on_plot_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Plot" to="." method="_on_play_mouse_exited"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Plot" to="." method="_on_plot_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Plot" to="." method="_on_plot_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Plot" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Clay" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Clay" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Clay" to="." method="_on_clay_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Clay" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Kukk" to="." method="_on_kukk_pressed"]
